<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ro.pub.cs.emergencymobileapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incident"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textType"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/types_array"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/textPriority"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:entries="@array/priority_array"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textNoPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/textNoPeople"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerNoPeople"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:entries="@array/people_array"
            android:gravity="right" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textDoctors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/textDoctors"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <ListView
            android:id="@+id/doctorsList"
            android:layout_width="match_parent"
            android:layout_height="312dp">
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/emergencyButton"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</LinearLayout>
