<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ro.pub.cs.emergencymobileapp.ConnectionActivity"
    tools:showIn="@layout/activity_connection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textType"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/textType"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/typeValue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="none"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textPriority"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/textPriority"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/priorityValue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="none"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textNoPeople"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/textNoPeople"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/noOfPeopleValue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="none"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textDoctors"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/textDoctors"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" android:weightSum="1">

        <ListView
            android:id="@+id/doctorsList"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_weight="0.29">
        </ListView>
    </LinearLayout>


    <Button
        android:id="@+id/btnSendToServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnSendToServer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"/>
</LinearLayout>
